gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
# ---
# apiVersion: "autoscaling/v2"
# kind: "HorizontalPodAutoscaler"
# metadata:
#   name: "nestjs-autoscaling"
#   namespace: "default"
#   labels:
#     app: "nestjs"
# spec:
#   scaleTargetRef:
#     kind: "Deployment"
#     name: "nestjs"
#     apiVersion: "apps/v1"
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: "Resource"
#     resource:
#       name: "cpu"
#       target:
#         type: "Utilization"
#         averageUtilization: 80
